# krcert_crawler

./: README.md  main.py  pyproject.toml
alarm/: message.py  sender.py  slack.py  slack_service.py
reference/: krcert.py
tests/: test_email.py  test_krcert.py  test_slack.py
