[tool.poetry]
name = "krcert-crawler"
version = "0.1.0"
description = ""
authors = ["suim <suim9770@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"


[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.2.2"
pytest = "^8.2.2"
beautifulsoup4 = "^4.12.3"
slack-sdk = "^3.31.0"
pandas = "^2.2.2"
lxml = "^5.3.0"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

